Bug 153046 - FILEOPEN: RTF: Text is aligned incorrectly
Summary: FILEOPEN: RTF: Text is aligned incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: Paragraph-Alignment
  Show dependency treegraph
 
Reported: 2023-01-16 14:42 UTC by Xisco Faulí
Modified: 2023-01-23 10:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion MSO vs LibreOffice 7.6 master (142.90 KB, image/png)
2023-01-16 14:42 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-01-16 14:42:45 UTC
Created attachment 184686 [details]
Comparsion MSO vs LibreOffice 7.6 master

Steps to reproduce:
1. Open attachment 70632 [details] from bug 57589
2. Go to second page

-> "Data Model Documentation" paragraph is aligned to the left. it should be centered. See comparison

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b9411e587586750f36ba9009b5f1e29fe461d8b5
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: de-DE (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-01-16 14:43:30 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2022-09-08 20:14:27 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2022-09-09 08:18:28 +0200
commit 3c610336a58f644525d5e4d2566c35eee6f7a618 (patch)
tree 64a2731aeb72475fcb40247260cc6124a6dd112b
parent 5f86f491701dc9f6f52129cf87644167e95ab40a (diff)
tdf#148214 RTF import: avoid fake paragraph for \page when possible

Bisected with: bibisect-linux64-7.5

Adding Cc: to Miklos Vajna
Comment 2 Stéphane Guillou (stragu) 2023-01-16 16:08:33 UTC
For some reason, can't reproduce with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d04c197b436094844abfa5fb7c12e095165d2bca
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Nor with:

Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

Any idea why that could be?
Comment 3 jindam, vani 2023-01-16 16:23:48 UTC
repro on android viewer [fdroid version]
Version: 7.6.0.0.alpha0+
Build ID: d6c54b3d4ee7
Comment 4 Commit Notification 2023-01-23 08:37:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e316524d9fe7720ed0a5eaf94999e54d211a8395

tdf#153046 RTF import: fix lost paragraph alignment after page break

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-23 10:56:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2bd2089467a4db5fd5fc59d00d6687ccb52b4548

tdf#153046 RTF import: fix lost paragraph alignment after page break

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.